--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -30,7 +30,8 @@
     "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "0.3.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
