--- a/backend-server/docker-compose.yaml
+++ b/backend-server/docker-compose.yaml
@@ -20,3 +20,8 @@ services:
       MYSQL_ROOT_PASSWORD: 'root'
     ports:
       - 3306:3306
+
+  redis-server:
+    image: redis:latest
+    ports:
+      - 6379:6379
