--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/cache-manager": "^4.0.2",
+    "axios": "1.3.2",
     "bcrypt": "^5.1.0",
     "cache-manager": "4.1.0",
     "cache-manager-redis-store": "2.0.0",
