--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -32,11 +32,14 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/cache-manager": "^4.0.2",
+    "aws-sdk": "^2.1378.0",
     "axios": "1.3.2",
     "bcrypt": "^5.1.0",
     "cache-manager": "4.1.0",
     "cache-manager-redis-store": "2.0.0",
+    "crypto": "^1.0.1",
     "graphql": "^16.6.0",
+    "graphql-upload": "13.0.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "passport": "^0.6.0",
