--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -32,6 +32,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/cache-manager": "^4.0.2",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-kakao": "^1.0.0",
     "aws-sdk": "^2.1378.0",
     "axios": "1.3.2",
     "bcrypt": "^5.1.0",
@@ -43,7 +45,9 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-kakao": "^1.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
